AquaticPrime::plist(): Fix signature
When I updated the plist function tests, I discovered that the `data`
field for "Signature" was incorrect.

Turns out that the 'plist' crate takes it upon itself to base64 encode
the input Vec it gets:
https://github.com/ebarnard/rust-plist/blob/v0.3.0/src/xml/writer.rs#L171-L174

This meant I was double-base64 encoding the signature. To fix this, I
removed base64 encoding from the `sign()` method, and return the `[u8]`
array directly.

I thought this would be the end of it, but I ran into another problem
where my tests failed. It turns out that the 'plist' crate base64
encodes using the `base64::MIME` config, which wraps the base64-encoded
string to 76 characters and uses CRLF line endings. But my XML string
uses plain LF line endings, so I ended up with useless CRs in the
`<data>` tag.

To solve this, I ended up having to fork the 'plist' crate and change it
to use the `base64::STANDARD` config, which doesn't line wrap the base64
string. For now the fork is a local copy. I'll publish it when I'm ready
to publish the rest.

--- a/license-generator/aquatic-prime/Cargo.toml
+++ b/license-generator/aquatic-prime/Cargo.toml
@@ -6,6 +6,6 @@ version = "0.0.1"
 base64 = "0.10.0"
 error-chain = "0.12.0"
 openssl = "0.10.15"
-plist = "0.3.0"
+plist = { path = "../../../rust-plist", branch = "data-without-base64-mime" }
 serde = "1.0.80"
 serde_derive = "1.0.80"
