aquatic-prime: Move 'base64' and 'serde_derive' crates to dev deps
As these crates are only used in tests, move them to the
`dev-dependencies` section, and add `cfg(test)` to 'base64'.

--- a/license-generator/aquatic-prime/Cargo.toml
+++ b/license-generator/aquatic-prime/Cargo.toml
@@ -3,9 +3,11 @@ name = "aquatic-prime"
 version = "0.0.1"
 
 [dependencies]
-base64 = "0.10.0"
 error-chain = "0.12.0"
 openssl = "0.10.15"
 plist = { path = "../../../rust-plist", branch = "data-without-base64-mime" }
 serde = "1.0.80"
+
+[dev-dependencies]
+base64 = "0.10.0"
 serde_derive = "1.0.80"
