.env.sample: Add `migrate` wrapper functions
Wrap all `migrate` subcommands. Turns out we do need the `-path`
argument for the other commands. Doesn't appear to work correctly for
`create`, but for the others it works fine.

--- a/license-generator/.env.sample
+++ b/license-generator/.env.sample
@@ -2,16 +2,73 @@ export DATABASE_NAME=""
 export DATABASE_USER=""
 export DATABASE_PASSWORD=""
 
+export DATABASE_URL="mysql://tcp(localhost:3306)/dome_key"
 
-function migrate () {
+
+function migrate-create () {
 	local migration_name="$1"
 
-	command migrate \
-		-database 'mysql://localhost:3306/dome_key' \
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
 		create \
 		-ext sql \
 		-format '20060102150405' \
 		"$migration_name"
 
 	mv *.sql migrations/
+}
+
+function migrate-goto () {
+	local version="$1"
+
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
+		goto \
+		"$version"
+}
+
+function migrate-up () {
+	local count="$1"
+
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
+		up \
+		"$count"
+}
+
+function migrate-down () {
+	local count="$1"
+
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
+		down \
+		"$count"
+}
+
+function migrate-drop () {
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
+		drop
+}
+
+function migrate-force () {
+	local version="$1"
+
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
+		force \
+		"$version"
+}
+
+function migrate-version () {
+	migrate \
+		-path migrations \
+		-database "$DATABASE_URL" \
+		version
 }
