--- a/license-generator/Cargo.toml
+++ b/license-generator/Cargo.toml
@@ -6,6 +6,8 @@ version = "0.0.1"
 error-chain = "0.12.0"
 fastcgi = "1.0.0"
 mysql = "14.1.1"
+rand = "0.5.5"
+sha1 = { version = "0.6.0", features = ["std"] }
 
 [workspace]
 members = [
