--- a/license-generator/.env.sample
+++ b/license-generator/.env.sample
@@ -2,7 +2,9 @@ export DATABASE_NAME=""
 export DATABASE_USER=""
 export DATABASE_PASSWORD=""
 
-export DATABASE_URL="mysql://tcp(localhost:3306)/dome_key"
+export DATABASE_URL="mysql://localhost:3306/dome_key"
+
+export GO_DATABASE_URL="mysql://tcp(localhost:3306)/dome_key"
 
 
 function migrate-create () {
@@ -10,7 +12,7 @@ function migrate-create () {
 
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		create \
 		-ext sql \
 		-format '20060102150405' \
@@ -24,7 +26,7 @@ function migrate-goto () {
 
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		goto \
 		"$version"
 }
@@ -34,7 +36,7 @@ function migrate-up () {
 
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		up \
 		"$count"
 }
@@ -44,7 +46,7 @@ function migrate-down () {
 
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		down \
 		"$count"
 }
@@ -52,7 +54,7 @@ function migrate-down () {
 function migrate-drop () {
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		drop
 }
 
@@ -61,7 +63,7 @@ function migrate-force () {
 
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		force \
 		"$version"
 }
@@ -69,6 +71,6 @@ function migrate-force () {
 function migrate-version () {
 	migrate \
 		-path migrations \
-		-database "$DATABASE_URL" \
+		-database "$GO_DATABASE_URL" \
 		version
 }
