--- a/license-generator/Cargo.toml
+++ b/license-generator/Cargo.toml
@@ -5,9 +5,11 @@ version = "0.0.1"
 [dependencies]
 error-chain = "0.12.0"
 fastcgi = "1.0.0"
+log = "0.4.6"
 mysql = "14.1.1"
 rand = "0.5.5"
 sha1 = { version = "0.6.0", features = ["std"] }
+simplelog = "0.5.3"
 
 [workspace]
 members = [
