--- a/license-generator/Cargo.toml
+++ b/license-generator/Cargo.toml
@@ -7,6 +7,7 @@ error-chain = "0.12.0"
 fastcgi = "1.0.0"
 log = "0.4.6"
 mysql = "14.1.1"
+paddle = { path = "paddle" }
 rand = "0.5.5"
 sha1 = { version = "0.6.0", features = ["std"] }
 simplelog = "0.5.3"
