--- a/license-generator/Cargo.toml
+++ b/license-generator/Cargo.toml
@@ -3,6 +3,7 @@ name = "license-generator"
 version = "0.0.1"
 
 [dependencies]
+base64 = "0.10.0"
 error-chain = "0.12.0"
 fastcgi = "1.0.0"
 log = "0.4.6"
