--- a/license-generator/Cargo.toml
+++ b/license-generator/Cargo.toml
@@ -3,6 +3,7 @@ name = "license-generator"
 version = "0.0.1"
 
 [dependencies]
+aquatic-prime = { path = "aquatic-prime" }
 error-chain = "0.12.0"
 fastcgi = "1.0.0"
 log = "0.4.6"
@@ -10,6 +11,8 @@ mysql = "14.1.1"
 paddle = { path = "paddle" }
 rand = "0.5.5"
 sha1 = { version = "0.6.0", features = ["std"] }
+serde = "1.0.80"
+serde_derive = "1.0.80"
 simplelog = "0.5.3"
 url = "1.7.2"
 
