lighttpd.conf: Add routes for additional license handlers
We want another route for a thank-you page, and a third for a Zip
download of the license.

--- a/license-generator/lighttpd.conf
+++ b/license-generator/lighttpd.conf
@@ -8,10 +8,22 @@ server.modules += ( "mod_fastcgi" )
 
 fastcgi.debug = 1
 fastcgi.server = (
-    "/" => ((
-        "socket" => "./fcgi.socket",
+    "/fulfillment" => ((
+        "socket" => "./license-generator.fcgi.socket",
         "check-local" => "disable",
         "bin-path" => var.CWD + "/target/debug/license-generator",
+        "max-procs" => 1
+    )),
+    "/license" => ((
+        "socket" => "./license.fcgi.socket",
+        "check-local" => "disable",
+        "bin-path" => var.CWD + "/target/debug/license",
+        "max-procs" => 1
+    )),
+    "/license/download" => ((
+        "socket" => "./license-download.fcgi.socket",
+        "check-local" => "disable",
+        "bin-path" => var.CWD + "/target/debug/license-download",
         "max-procs" => 1
     ))
 )
