lighttpd.conf: Use `license` binary for `/license/download` route

--- a/license-generator/lighttpd.conf
+++ b/license-generator/lighttpd.conf
@@ -23,7 +23,7 @@ fastcgi.server = (
     "/license/download" => ((
         "socket" => "./license-download.fcgi.socket",
         "check-local" => "disable",
-        "bin-path" => var.CWD + "/target/debug/license-download",
+        "bin-path" => var.CWD + "/target/debug/license",
         "max-procs" => 1
     ))
 )
