--- a/license-generator/Cargo.toml
+++ b/license-generator/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.1"
 [dependencies]
 aquatic-prime = { path = "aquatic-prime" }
 error-chain = "0.12.0"
+exitcode = "1.1.2"
 fastcgi = "1.0.0"
 log = "0.4.6"
 mysql = "14.1.1"
