lighttpd.conf: Serve static assets
Want to be able to use our static image and CSS assets from the FCGI
code when rendering HTML.

--- a/license-generator/lighttpd.conf
+++ b/license-generator/lighttpd.conf
@@ -1,5 +1,5 @@
 var.log_root    = "/usr/local/var/log/lighttpd"
-var.server_root = "/usr/local/var/www"
+var.server_root = ".."
 server.document-root = server_root
 server.port = 8080
 server.errorlog = log_root + "/error.log"
@@ -27,3 +27,5 @@ fastcgi.server = (
         "max-procs" => 1
     ))
 )
+
+include "/usr/local/etc/lighttpd/conf.d/mime.conf"
