.htaccess: Add full FastCGI rewrite rules
Also add some section comments.

Here we point

/license
and
/license/download

to `license.fcgi`, and

/fulfillment

to `fulfillment.fcgi`. The actual FastCGI binaries with the `.fcgi`
extension get redirected to 404 because we already have nicer-looking
URLs for them.

--- a/.htaccess
+++ b/.htaccess
@@ -6,13 +6,21 @@ ErrorDocument 404 /404.html
 
 RewriteEngine on
 
+# Redirect HTTP to HTTPS
 RewriteCond %{HTTPS} != on
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
+# Disallow access to .htaccess
 RewriteRule /?\.htaccess$ - [F,L]
 
-RewriteRule ^(license-generator) license-generator.fcgi [L]
-
+# Remove .html extension
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^\.]+)$ $1.html [L]
+
+# FastCGI routes
+RewriteRule ^(license) license.fcgi [QSA,L]
+RewriteRule ^(license/download) license.fcgi [QSA,L]
+RewriteRule ^(fulfillment) fulfillment.fcgi [QSA,L]
+RewriteRule ^(license.fcgi)$ - [L,R=404]
+RewriteRule ^(fulfillment.fcgi)$ - [L,R=404]
