--- a/license-generator/lighttpd.conf
+++ b/license-generator/lighttpd.conf
@@ -9,9 +9,9 @@ server.modules += ( "mod_fastcgi" )
 fastcgi.debug = 1
 fastcgi.server = (
     "/fulfillment" => ((
-        "socket" => "./license-generator.fcgi.socket",
+        "socket" => "./fulfillment.fcgi.socket",
         "check-local" => "disable",
-        "bin-path" => var.CWD + "/target/debug/license-generator",
+        "bin-path" => var.CWD + "/target/debug/fulfillment",
         "max-procs" => 1
     )),
     "/license" => ((
