Add deployment script
To deploy, run

    $ make deploy

This checks prerequisites and runs `scripts/deploy.sh`.

Makefile:
Include a new target that builds the Rust binaries for Linux using
Docker.

The script `rsync`s the website files to the server, moves some files
around on the server, and runs the database migrations.

Currently I'm getting an error at the database migration stage, as it
seems I can't use `UTC_TIMESTAMP()` as a default column value. Need to
correct that to get a clean deployment.

--- a/license-generator/.env.sample
+++ b/license-generator/.env.sample
@@ -8,6 +8,9 @@ export DATABASE_URL="mysql://localhost:3306/dome_key"
 
 export GO_DATABASE_URL="mysql://tcp(localhost:3306)/dome_key"
 
+export SSH_SERVER="user@host"
+export REMOTE_PUBLIC_WWW="/home/user/www"
+
 
 function migrate-create () {
 	local migration_name="$1"
