--- a/license-generator/aquatic-prime/Cargo.toml
+++ b/license-generator/aquatic-prime/Cargo.toml
@@ -5,8 +5,11 @@ version = "0.0.1"
 [dependencies]
 error-chain = "0.12.0"
 openssl = "0.10.15"
-plist = { path = "../../../rust-plist", branch = "data-without-base64-mime" }
 serde = "1.0.80"
+
+[dependencies.plist]
+git = "https://github.com/teddywing/rust-plist.git"
+branch = "data-without-base64-mime"
 
 [dev-dependencies]
 base64 = "0.10.0"
