lighttpd.conf: Allow running from the project root
* Move the `make run` target into the project root's Makefile
* Update paths in lighttpd.conf to correspond to its new location

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,5 +1,5 @@
 var.log_root    = "/usr/local/var/log/lighttpd"
-var.server_root = ".."
+var.server_root = "."
 server.document-root = server_root
 server.port = 8080
 server.errorlog = log_root + "/error.log"
@@ -9,21 +9,21 @@ server.modules += ( "mod_fastcgi" )
 fastcgi.debug = 1
 fastcgi.server = (
     "/fulfillment" => ((
-        "socket" => "./fulfillment.fcgi.socket",
+        "socket" => "./license-generator/fulfillment.fcgi.socket",
         "check-local" => "disable",
-        "bin-path" => var.CWD + "/target/debug/fulfillment",
+        "bin-path" => var.CWD + "/license-generator/target/debug/fulfillment",
         "max-procs" => 1
     )),
     "/license" => ((
-        "socket" => "./license.fcgi.socket",
+        "socket" => "./license-generator/license.fcgi.socket",
         "check-local" => "disable",
-        "bin-path" => var.CWD + "/target/debug/license",
+        "bin-path" => var.CWD + "/license-generator/target/debug/license",
         "max-procs" => 1
     )),
     "/license/download" => ((
-        "socket" => "./license-download.fcgi.socket",
+        "socket" => "./license-generator/license-download.fcgi.socket",
         "check-local" => "disable",
-        "bin-path" => var.CWD + "/target/debug/license",
+        "bin-path" => var.CWD + "/license-generator/target/debug/license",
         "max-procs" => 1
     ))
 )
